[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/space_backbround.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Audio/piano_A.wav" type="AudioStream" id=3]
[ext_resource path="res://Ship.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Game.gd" type="Script" id=5]
[ext_resource path="res://src/Sound.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.898039, 0.690196, 0.513726, 0 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 5 )
_score_path = NodePath("Control/HBoxContainer/Score")
_sound_path = NodePath("Sound")

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 4 )]

[node name="Sound" type="Node" parent="."]
script = ExtResource( 6 )
rootNote = 0
playChordProgression = false

[node name="Note1" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )
volume_db = -21.0

[node name="Note2" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )
volume_db = -21.0

[node name="Note3" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )
volume_db = -21.0

[node name="UI" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 558.0
margin_right = 225.0
margin_bottom = 598.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 10.3826
margin_top = 556.584
margin_right = 172.383
margin_bottom = 596.584
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="Control/HBoxContainer"]
margin_top = 14.0
margin_right = 86.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Control/HBoxContainer"]
margin_left = 94.0
margin_top = 14.0
margin_right = 140.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "1/6"
__meta__ = {
"_edit_use_anchors_": false
}
